# C-TuneZ

./: .gitignore  CMakeLists.txt  build.sh  compile-commands-gen.sh  main.cpp  setup.sh
CMake/: CMakeLists.txt
Frontend/: buildConfig.json
Frontend/public/: index.html  manifest.json
Frontend/src/js/: Startup.js  app.path  loader.path  main.js
Frontend/src/js/Components/: Window.ui.js  components.path
Frontend/src/js/Core/: LoadingScreen.js  ModuleLoader.js  Network.js  PreLoader.js  PrettyConsole.js  Registry.js  Utils.js
Frontend/src/ui/: _base.scss  _fonts.scss  _layout.scss  _loader.scss  _scrollbar.scss  _variable.scss  components.scss  main.scss
Source/: CMakeLists.txt
Source/TuneZ/: CMakeLists.txt  GL.h  GLM.h  ImGui.h  TypeDefs.h
Source/TuneZ/App/: CMakeLists.txt  MainScene.cpp  MainScene.h
Source/TuneZ/Audio/: AudioStructs.h  CMakeLists.txt  FFT.cpp  FFT.h  FIFOBuffer.cpp  FIFOBuffer.h  FIFOInputBuffer.cpp  FIFOInputBuffer.h
Source/TuneZ/Core/: Application.cpp  Application.h  Asset.cpp  Asset.h  CMakeLists.txt  Config.cpp  Config.h  Input.cpp  Input.h  KeyCodes.h  Timestamp.h  Window.cpp  Window.h
Source/TuneZ/Generator/: CMakeLists.txt  MeshGenerator.cpp  MeshGenerator.h
Source/TuneZ/ImGui/: CMakeLists.txt  SceneHierarchyPanel.cpp  Widgets.cpp  Widgets.h
Source/TuneZ/JSUtils/: CMakeLists.txt  LogJS.h  Logger.cpp  Logger.h
Source/TuneZ/Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  InstanceRenderer.cpp  InstanceRenderer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Source/TuneZ/Scene/: CMakeLists.txt  Components.h  Entity.cpp  Entity.h  ImGui.cpp  ImGui.h  Scene.cpp  Scene.h
Source/TuneZ/Types/: CMakeLists.txt  UUID.cpp  UUID.h
Source/TuneZ/Utils/: CMakeLists.txt  FileHandler.cpp  FileHandler.h
Source/TuneZ/WASM/: CMakeLists.txt  WASMAppBridge.h  WASMAudioBridge.h  WASM_Bridge.cpp
(+24 files in other folders)
